--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ image*
 infrastructure/.lambda_account.json
 .hypothesis
 launch.json
+days/data/TinyImageNet/**
+days/saved_models/tutorial10/**
+days/data/TinyImageNet.zip
