--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,34 @@
-jupyterlab==3.2.5
-torch
-torchtyping
+# Make sure to install the torch dependencies with conda:
+# conda install pytorch=1.11.0 torchdata torchvision -c pytorch -y
+
+gym==0.23.1
+fancy_einsum
 einops
-torchvision
-torchtext
-numpy
+requests
 transformers
-sentencepiece
-unidecode
-jupyter_kernel_gateway
-ipykernel
-gin-config
-web-pdb
 pytest
+click
+joblib
+tqdm
+ipykernel
+notebook
+ipywidgets
+jupyter
+flask
 matplotlib
-plotly
-sklearn
-black
-comet_ml
-mediapy
 numpy-stl
-traitlets==5.1.1
-git+https://github.com/google/gin-config.git@e518c4ec7755a3e5da973e894ab23cc80c6665ed#egg=gin-config
-gym
-seaborn
-pytorch_lightning
+mediapy
+pandas
+scikit-learn
+black
+wandb
+sentence-transformers
+ftfy
+tensorboard
+pygame
+plotly
+sympy
+accelerate
+pre-commit
+diffusers
+torchtyping
